New Methods added

--- a/XeroAutomation/test-output/old/Default suite/classes.html
+++ b/XeroAutomation/test-output/old/Default suite/classes.html
@@ -15,19 +15,39 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Test_All_Tabs</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>Incorrect_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>SignUp_To_XDC_A</td>
+<td>Navigate_to_XERO</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Navigate_to_XERO</td>
+<td>Upload_Profile_Window</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SignUp_To_XDC_E</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Navigate_to_XERO1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Add_another_organization_StandardVersion</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test_All_Tabs</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Add_another_organization_with_current_Quickbooks_user</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SignUp_To_XDC_A</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -43,11 +63,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>SignUp_To_XDC_E</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Navigate_to_XERO1</td>
+<td>Add_another_organization_Trail_version_1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
