--- a/XeroAutomation/test-output/old/Default suite/methods.html
+++ b/XeroAutomation/test-output/old/Default suite/methods.html
@@ -1,28 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Incorrect_Email()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Incorrect_Email</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Add_another_organization_StandardVersion()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Add_another_organization_StandardVersion</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Incorrect_Password()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Incorrect_Password</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>81</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Add_another_organization_Trail_version_1()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Add_another_organization_Trail_version_1</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Navigate_to_XERO()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Navigate_to_XERO</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Add_another_organization_with_current_Quickbooks_user()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Add_another_organization_with_current_Quickbooks_user</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Navigate_to_XERO1()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Navigate_to_XERO1</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Incorrect_Email()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Incorrect_Email</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_A()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_A</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Incorrect_Password()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Incorrect_Password</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_B()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_B</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Navigate_to_XERO()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Navigate_to_XERO</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_C()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_C</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Navigate_to_XERO1()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Navigate_to_XERO1</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:10</td>   <td>205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_D()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_D</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_A()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_A</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:11</td>   <td>217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_E()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_E</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_B()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_B</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:11</td>   <td>228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Test_All_Tabs()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Test_All_Tabs</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_C()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_C</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/10/20 07:52:11</td>   <td>247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Test_Logout_Functionality()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Test_Logout_Functionality</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_D()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_D</td> 
   <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="9f8bb1">  <td>18/10/20 07:52:11</td>   <td>262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroDriverTest.mainmethod()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">mainmethod</td> 
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.SignUp_To_XDC_E()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">SignUp_To_XDC_E</td> 
+  <td>main@1558712965</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Test_All_Tabs()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Test_All_Tabs</td> 
+  <td>main@1558712965</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Test_Logout_Functionality()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Test_Logout_Functionality</td> 
+  <td>main@1558712965</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>18/10/22 09:12:57</td>   <td>249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroApplication.Upload_Profile_Window()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">Upload_Profile_Window</td> 
+  <td>main@1558712965</td>   <td></td> </tr>
+<tr bgcolor="9f8bb1">  <td>18/10/22 09:12:57</td>   <td>268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XeroDriverTest.mainmethod()[pri:0, instance:TestScripts.XeroDriverTest@343f4d3d]">mainmethod</td> 
   <td>main@1558712965</td>   <td></td> </tr>
 </table>
